Fix word wrap on home page + add CDN url

--- a/blog/themes/hugo-cactus-theme/static/css/style.css
+++ b/blog/themes/hugo-cactus-theme/static/css/style.css
@@ -10,6 +10,19 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 }
 .hidden { display: none; }
 
+.wrap{
+    -ms-word-break: break-all;
+    word-break: break-all;
+
+ /* Non standard for webkit */
+     word-break: break-word;
+
+    -webkit-hyphens: auto;
+       -moz-hyphens: auto;
+        -ms-hyphens: auto;
+            hyphens: auto;
+}
+
 /* Icons */
 @font-face {
 	font-family: 'icons';
